modified:   requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ seaborn
 xlsxwriter
 scikit-learn
 statsmodels
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+torchaudio==2.0.2+cpu
+-f https://download.pytorch.org/whl/cpu
